# rstyle

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  test.rs
benches/: format.rs
src/: config.rs  formatter.rs  lib.rs  main.rs  pass.rs  syntax.rs
src/pass/: blank_line.rs  chain.rs  derive.rs  doc_comment.rs  import.rs  line_length.rs  section_header.rs  whitespace.rs
src/syntax/: indentation.rs  spacing.rs  string.rs
tests/: formatter_tests.rs
tests/fixtures/: already_formatted_sample.input.rs  attribute.input.rs  binary_operators.expected.rs  binary_operators.input.rs  chain_already_correct.input.rs  chain_break_long_line.input.rs  chain_breaks_before_arg_expansion.input.rs  chain_closure_body_indent.expected.rs  chain_closure_body_indent.input.rs  chain_collapse_when_fits.expected.rs  chain_collapse_when_fits.input.rs  chain_field_access_not_broken.expected.rs  chain_field_access_not_broken.input.rs  chain_preserve_break_after_multiline_closure.input.rs  chain_preserve_existing_break_and_break_long.expected.rs  chain_preserve_existing_break_and_break_long.input.rs  chain_short_stays_single_line.input.rs  chain_user_field_break_preserved.expected.rs  chain_user_field_break_preserved.input.rs  closure.input.rs  collapse_blank_lines.expected.rs  collapse_blank_lines.input.rs  collapse_brace_to_prev_line.expected.rs  collapse_brace_to_prev_line.input.rs  comparison_operators.expected.rs  comparison_operators.input.rs  compound_assignment.expected.rs  compound_assignment.input.rs  continuation_indent_dot.expected.rs  continuation_indent_dot.input.rs  doc_comment_inner.expected.rs  doc_comment_inner.input.rs  doc_comment_join_short.expected.rs  doc_comment_join_short.input.rs  doc_comment_preserve_code_block.input.rs  doc_comment_reflow_long.expected.rs  doc_comment_reflow_long.input.rs  expand_long_fn_params.expected.rs  expand_long_fn_params.input.rs  expand_long_inline_closure.expected.rs  (+109 more)
tests/wip/: input.rs  output.rs
