[package]
name = "rstyle"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dev-dependencies]
criterion = { version = "0.5", features = [] }

[[bench]]
name = "format"
harness = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
comrak = { version = "0.51.0", default-features = false, features = [] }
ra_ap_syntax = "0.0.322"


[lints.clippy]
assigning_clones = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
if_then_some_else_none = "warn"
index_refutable_slice = "warn"
large_futures = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_option = "warn"
panic = "warn"
pub_underscore_fields = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
trivially_copy_pass_by_ref = "warn"
tuple_array_conversions = "warn"
unchecked_duration_subtraction = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_safety_doc = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_self = "warn"
use_self = "warn"
unwrap_used = "warn"
type_complexity = "allow"

[lints.rust]
ambiguous_negative_literals = "deny"
closure_returning_async_block = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "deny"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
